added default values for schemagenUrl default choice